# cssecdv-activity-2-pytm

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  Makefile  README.md  cli_interface.py  generate_reports.py  generate_visuals.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh  threat_model_processor.py  web_feedback_system_dfd.py
output/: web_feedback_system.json  web_feedback_system_threats.txt
